--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
-    <script src="./index.js"></script>
+    <script>
+        window.LOAD_DATA = (data) => {
+            const {
+                title,
+                url,
+            } = data;
+
+            document.body.innerHTML = `<h1>${title}</h1><img src="${url}"></img>`;
+        }
+        const tag = document.createElement('script');
+        tag.src = 'https://cdn.jsdelivr.net/gh/xcodebuild/perfdemo@master/hello-world/api.jsonp.js';
+        document.head.appendChild(tag);
+    </script>
 </head>
 <body>
-   Loading
+   Loading...
 </body>
 </html>
